src/test/resources/com/puppycrawl/tools/checkstyle/checks/javadoc/invalidjavadocposition/InputInvalidJavadocPosition2[InputInvalidJavadocPosition]#method24().mjava
    void method24() { /** violation */ }

